Fixed a bunch of layout bugs, added companies' industries and websites to the single vanacy page

--- a/src/components/layers/main/styles.scss
+++ b/src/components/layers/main/styles.scss
@@ -85,10 +85,14 @@
   }
 
   & .mainLayerButtons {
-    margin-top: 25px;
+    margin-top: 15px;
 
-    & > .btnRight {
-      margin-left: 15px;
+    & .btn {
+      margin-top: 10px;
+    }
+
+    & .btnLeft {
+      margin-right: 15px;
     }
 
     & a.btn {
